--- a/_posts/2019-07-26-eunji.markdown
+++ b/_posts/2019-07-26-eunji.markdown
@@ -3,7 +3,7 @@ layout: post
 title: "한글로 써보자"
 date: 2019-07-26
 description: 
-image: /assets/images/placeholder-15.jpg
+image: /assets/images/test.gif
 author: Thomas Vaeth
 tags: 
   - Squid
