--- a/_posts/2019-07-25-halo.markdown
+++ b/_posts/2019-07-25-halo.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "한글로 써보자"
+title: "halo"
 date: 2019-07-26
 description: 
 image: /assets/images/halo.png
@@ -10,11 +10,22 @@ tags:
   - Mixtape
 ---
 
-Porkbun is an amazingly awesome ICANN accredited domain name registrar based out of Portland, OR. We're different, we're easy, and we're affordable. Use us, you won't be sorry. If you don't use us we'll be sad, but we'll still love you.
 
-707 SW Washington St, STE 1100
-Portland, OR 97205, US
-1.855.PORKBUN (1.855.767.5286) 
-Mon - Fri / 9AM - 5PM Pacific Time
-support@porkbun.com
+![pinspot01](/assets/images/pinspot.gif)
+
+Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
+![pinspot01](/assets/images/pinspot01.gif)
+
+Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
